# CounterStrike-1K

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
cs2_release/: README.md  __init__.py  __main__.py  quickstart.ipynb
cs2_release/action_probe/: __init__.py  coverage.py  eval_predictions.py  labels.py  off_pov.py  train_multipov.py  train_offscreen.py  train_video.py
cs2_release/audio_probe/: __init__.py  pipeline.py  train.py
cs2_release/benchmarks/: __init__.py  dataloader_formats.py
cs2_release/core/: __init__.py  audio.py  corruption_packs.py  embeddings.py  io.py  metrics.py  stats.py  tracking.py  video.py  windows.py
cs2_release/corruption/: __init__.py  eval.py  make_packs.py  train.py
cs2_release/encoders/: __init__.py  extract_audio.py  extract_video.py  merge.py  registry.py  shard_runner.py
cs2_release/global_state/: __init__.py  train.py
cs2_release/hygiene/: __init__.py  eval_split.py
cs2_release/pipelines/: __init__.py  eval_suite.py
cs2_release/retrieval/: __init__.py  eval_basic.py  eval_multipositive.py  eval_pairwise_spatial.py  eval_temporal.py  render_qualitative.py
cs2_release/tools/: __init__.py  export_paper_results.py
cs2_train/: .gitignore  DATALOADER_NOTES.md  README.md  download_script.py  requirements.txt
cs2_train/configs/: diamond_csgo_lowres_paper.json
cs2_train/docs/: CHANGES_FROM_DIAMOND.md  DIAMOND_BASELINE_PROTOCOL.md
cs2_train/notebooks/: dataset.ipynb  inference.ipynb  inspect.ipynb  video_vae.ipynb
cs2_train/scripts/: build_hltv_acquisition_manifest.py  create_deterministic_rc_splits.py  (+4 more)
(+25 files in other folders)
